--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
 </header>
 
-<section class="bg-light">
+<section class="bg-light fade-in">
   <div class="container">
     <h1>DEC – Dessinateur Projeteur BIM (Montpellier)</h1>
     <p>
