--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
 
 <header>
+  <div style="display:flex;align-items:center;gap:10px;">
+    <img src="assets/img/logo.png" alt="DEC BIM" style="height:44px;">
+    <strong>DEC</strong>
+  </div>
   <div class="container">
     <nav>
       <a href="index.html">Accueil</a>
@@ -65,3 +69,4 @@
 
 </body>
 </html>
+
