--- a/services.html
+++ b/services.html
@@ -2,26 +2,10 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Offres – DEC Dessinateur Projeteur BIM</title>
+  <title>Services – Dessinateur Projeteur BIM à Montpellier</title>
+  <meta name="description" content="Services de dessinateur-projeteur BIM à Montpellier : ERP catégorie 5, permis de construire, rénovation, extension.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/css/style.css">
-  <script type="application/ld+json" defer data-domain="dec-bim.fr" src="https://plausible.io/js/script.js">
-{
-  "@context": "https://schema.org",
-  "@type": "ProfessionalService",
-  "name": "DEC – Dessinateur Projeteur BIM",
-  "address": {
-    "@type": "PostalAddress",
-    "addressLocality": "Montpellier",
-    "addressRegion": "Occitanie",
-    "addressCountry": "FR"
-  },
-  "areaServed": "Hérault",
-  "description": "Dessinateur-projeteur BIM indépendant spécialisé en rénovation, extension et ERP catégorie 5.",
-  "url": "https://dec-bim.fr",
-  "sameAs": []
-}
-</script>
 </head>
 <body>
 
@@ -38,32 +22,36 @@
       <a href="offres.html">Offres</a>
       <a href="portfolio.html">Portfolio</a>
       <a href="contact.html">Contact</a>
+	  <a href="services.html">Services</a>
     </nav>
 
   </div>
 </header>
 
-<section class="bg-light fade-in reveal">
+<section class="reveal">
   <div class="container">
-    <h1>Offres</h1>
+    <h1>Services</h1>
 
     <div class="card">
-      <h2>ERP Cat. 5</h2>
-      <p>Forfait : 2 200 € – 2 800 € HT</p>
-      <ul>
-        <li>Modélisation Revit</li>
-        <li>Dossiers sécurité & accessibilité</li>
-        <li>1 cycle de modifications inclus</li>
-      </ul>
+      <h2>ERP catégorie 5</h2>
+      <p>
+        Production de dossiers réglementaires pour commerces et établissements recevant du public.
+        Plans sécurité incendie, accessibilité PMR, modélisation Revit.
+      </p>
     </div>
 
     <div class="card">
-      <h2>Permis / Extension</h2>
-      <ul>
-        <li>Plans PC / DP</li>
-        <li>Rénovations complètes</li>
-        <li>Tarifs sur devis</li>
-      </ul>
+      <h2>Permis de construire & Déclarations préalables</h2>
+      <p>
+        Dossiers complets prêts au dépôt pour maisons individuelles, extensions et rénovations.
+      </p>
+    </div>
+
+    <div class="card">
+      <h2>Modélisation BIM – Revit</h2>
+      <p>
+        Modélisation existant et projet, livrables propres et exploitables pour architectes et MOE.
+      </p>
     </div>
   </div>
 </section>
@@ -85,5 +73,6 @@ const observer = new IntersectionObserver(entries => {
 
 document.querySelectorAll(".reveal").forEach(el => observer.observe(el));
 </script>
+
 </body>
 </html>
