--- a/offres.html
+++ b/offres.html
@@ -38,6 +38,7 @@
       <a href="offres.html">Offres</a>
       <a href="portfolio.html">Portfolio</a>
       <a href="contact.html">Contact</a>
+	  <a href="services.html">Services</a>
     </nav>
 
   </div>
