--- a/offres.html
+++ b/offres.html
@@ -44,27 +44,83 @@
   </div>
 </header>
 
-<section class="bg-light fade-in reveal">
+<section class="reveal">
   <div class="container">
-    <h1>Offres</h1>
+    <h2>Offres Clés en Main</h2>
+    <p class="section-subtitle">Des forfaits transparents, adaptés à chaque étape de votre projet</p>
 
-    <div class="card">
-      <h2>ERP Cat. 5</h2>
-      <p>Forfait : 2 200 € – 2 800 € HT</p>
-      <ul>
-        <li>Modélisation Revit</li>
-        <li>Dossiers sécurité & accessibilité</li>
-        <li>1 cycle de modifications inclus</li>
-      </ul>
+    <div class="offers-grid">
+      
+      <!-- Offre 1 : ERP -->
+      <div class="offer-card highlight">
+        <div class="offer-header">
+          <h3>Forfait ERP Catégorie 5 Complet</h3>
+          <div class="offer-price">À partir de <strong>2 200 € HT</strong></div>
+          <p class="offer-badge">Le plus demandé</p>
+        </div>
+        <div class="offer-content">
+          <p>Pour l'ouverture, la reprise ou la rénovation de votre commerce, bureau ou restaurant.</p>
+          <ul>
+            <li>Relevé et modélisation BIM de l'existant </li>
+            <li>Plans réglementaires sécurité incendie</li>
+            <li>Plans d'accessibilité PMR norme ERP</li>
+            <li>Notice technique et conseils conformité</li>
+            <li>1 à 2 révisions incluses</li>
+          </ul>
+        </div>
+        <div class="offer-cta">
+          <a href="/contact" class="btn btn-primary">Demander un devis précis</a>
+        </div>
+      </div>
+
+      <!-- Offre 2 : Permis -->
+      <div class="offer-card">
+        <div class="offer-header">
+          <h3>Forfait Permis / Déclaration Préalable</h3>
+          <div class="offer-price"><strong>Sur devis personnalisé</strong></div>
+          <p class="offer-badge">Projet sur mesure</p>
+        </div>
+        <div class="offer-content">
+          <p>Construction neuve, extension, ou rénovation de maison individuelle.</p>
+          <ul>
+            <li>Étude préalable de faisabilité (PLU)</li>
+            <li>Plans techniques complets (situation, masse, coupes, façades)</li>
+            <li>Dossier graphique prêt au dépôt en mairie</li>
+            <li>Notice descriptive CERFA</li>
+            <li>Accompagnement jusqu'à l'instruction</li>
+          </ul>
+        </div>
+        <div class="offer-cta">
+          <a href="/contact" class="btn btn-secondary">Décrivez-moi votre projet</a>
+        </div>
+      </div>
+
+      <!-- Offre 3 : 3D -->
+      <div class="offer-card">
+        <div class="offer-header">
+          <h3>Forfait Visualisation 3D</h3>
+          <div class="offer-price">À partir de <strong>450 € HT / vue</strong></div>
+          <p class="offer-badge">Outil de décision</p>
+        </div>
+        <div class="offer-content">
+          <p>Pour visualiser, présenter ou valider un projet avant engagement des travaux.</p>
+          <ul>
+            <li>Modélisation 3D de votre projet sur mesure</li>
+            <li>1 à 3 vues photoréalistes (extérieur / intérieur)</li>
+            <li>Intégration dans l'environnement existant</li>
+            <li>Réglages matériaux, éclairage, ambiance</li>
+            <li>Fichier image haute résolution livré</li>
+          </ul>
+        </div>
+        <div class="offer-cta">
+          <a href="/contact" class="btn btn-secondary">Obtenir une simulation</a>
+        </div>
+      </div>
+
     </div>
 
-    <div class="card">
-      <h2>Permis / Extension</h2>
-      <ul>
-        <li>Plans PC / DP</li>
-        <li>Rénovations complètes</li>
-        <li>Tarifs sur devis</li>
-      </ul>
+    <div class="offer-footer">
+      <p><strong>Besoin d'une solution sur mesure ?</strong> Tous les forfaits sont ajustables selon la complexité de votre projet. <a href="/contact">Contactez-moi pour une étude gratuite</a>.</p>
     </div>
   </div>
 </section>
