--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
           <li><a href="offres.html">Offres</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="mentions-legales.html">Mentions légales</a></li> <!-- AJOUT -->
         </ul>
       </div>
       
@@ -389,7 +390,8 @@
       <p>&copy; <span id="current-year">2024</span> DEC BIM - Dessinateur Projeteur BIM. Tous droits réservés.</p>
       <p>
         <a href="mentions-legales.html">Mentions légales</a> • 
-        <a href="confidentialite.html">Politique de confidentialité</a>
+        <a href="confidentialite.html">Politique de confidentialité</a> • 
+        <a href="cookies.html">Gestion des cookies</a> <!-- AJOUT OPTIONNEL -->
       </p>
     </div>
   </div>
