--- a/offres.html
+++ b/offres.html
@@ -575,17 +575,18 @@
           <li><a href="services.html#erp">ERP Catégorie 5</a></li>
           <li><a href="services.html#permis">Permis de Construire</a></li>
           <li><a href="services.html#3d">Rendu 3D & BIM</a></li>
-          <li><a href="services.html#declaration">Déclarations Préalables</a></li>
+          <li><a href="services.html#declaration">Déclaration Préalable</a></li>
         </ul>
       </div>
       
       <div class="footer-col">
-        <h3>Navigation</h3>
+        <h3>Entreprise</h3>
         <ul>
           <li><a href="index.html">Accueil</a></li>
           <li><a href="offres.html">Offres</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="mentions-legales.html">Mentions légales</a></li> <!-- AJOUT -->
         </ul>
       </div>
       
@@ -604,7 +605,8 @@
       <p>&copy; <span id="current-year">2024</span> DEC BIM - Dessinateur Projeteur BIM. Tous droits réservés.</p>
       <p>
         <a href="mentions-legales.html">Mentions légales</a> • 
-        <a href="confidentialite.html">Politique de confidentialité</a>
+        <a href="confidentialite.html">Politique de confidentialité</a> • 
+        <a href="cookies.html">Gestion des cookies</a> <!-- AJOUT OPTIONNEL -->
       </p>
     </div>
   </div>
