--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta name="description" content="Dessinateur-projeteur BIM indépendant à Montpellier. Spécialisé ERP catégorie 5, permis de construire et rendus 3D photoréalistes. Accompagnement complet pour vos projets.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
-  <meta name="author" content="DEC BIM">
+  <meta name="google-site-verification" content="-pKegx6GY7YdypUieMLDoApWlZDHkawFoiCMPJfPcXs" />
+  <meta name="author" content="DEC BIM - Dessinateur Projeteur BIM Montpellier">
+  <meta name="geo.placename" content="Montpellier">
+  <meta name="geo.region" content="FR-34">
   
   <!-- Open Graph -->
   <meta property="og:title" content="DEC – Dessinateur Projeteur BIM Montpellier">
@@ -14,7 +17,8 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://dec-bim.fr">
   <meta property="og:image" content="https://dec-bim.fr/assets/img/og-image.jpg">
-  
+  <meta property="og:locale" content="fr_FR">
+
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
   <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
@@ -195,7 +199,7 @@
           <p>Visualisations photoréalistes et modélisations BIM pour valider vos choix et présenter votre projet.</p>
           <ul class="service-features" aria-label="Caractéristiques du service Rendu 3D">
             <li><i class="fas fa-check-circle"></i> Images haute définition</li>
-            <li><i class="fas fa-check-circle"></i> Intégration Revit</li>
+            <li><i class="fas fa-check-circle"></i> Intégration BIM</li>
             <li><i class="fas fa-check-circle"></i> Outil de décision</li>
           </ul>
           <a href="services.html#3d" class="service-link">
