--- a/404.html
+++ b/404.html
@@ -6,6 +6,10 @@
   <meta name="description" content="La page que vous recherchez n'existe pas. Retournez à l'accueil pour découvrir nos services de dessin bâtiment à Montpellier.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
+  <meta name="google-site-verification" content="-pKegx6GY7YdypUieMLDoApWlZDHkawFoiCMPJfPcXs" />
+  <meta name="author" content="DEC BIM - Dessinateur Projeteur BIM Montpellier">
+  <meta name="geo.placename" content="Montpellier">
+  <meta name="geo.region" content="FR-34">
   
   <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/style.css">
