--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,17 @@
   <meta name="description" content="Contactez votre dessinateur-projeteur BIM à Montpellier. Devis gratuit sous 24h pour vos projets ERP, permis de construire et rendus 3D.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="-pKegx6GY7YdypUieMLDoApWlZDHkawFoiCMPJfPcXs" />
+  <meta name="author" content="DEC BIM - Dessinateur Projeteur BIM Montpellier">
+  <meta name="geo.placename" content="Montpellier">
+  <meta name="geo.region" content="FR-34">
   
   <!-- Open Graph -->
   <meta property="og:title" content="Contact - DEC BIM Dessinateur Projeteur">
   <meta property="og:description" content="Devis gratuit pour vos projets de dessin bâtiment à Montpellier">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://dec-bim.fr/contact.html">
+  <meta property="og:locale" content="fr_FR">
   
   <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/style.css">
@@ -192,7 +197,7 @@
               <li><i class="fas fa-check"></i> Permis de construire</li>
               <li><i class="fas fa-check"></i> Déclarations préalables</li>
               <li><i class="fas fa-check"></i> Rendu 3D photoréaliste</li>
-              <li><i class="fas fa-check"></i> Modélisation Revit</li>
+              <li><i class="fas fa-check"></i> Modélisation BIM</li>
               <li><i class="fas fa-check"></i> Conformité PLU</li>
             </ul>
           </div>
@@ -221,7 +226,7 @@
           </div>
           
           <div class="form-card">
-            <form id="contact-form" action="https://formspree.io/f/votre-id-formspree" method="POST" enctype="multipart/form-data" novalidate>
+            <form id="contact-form" action="https://formspree.io/f/mykevedl" method="POST" enctype="multipart/form-data" novalidate>
               <!-- Champs cachés Formspree -->
               <input type="hidden" name="_subject" value="📐 Nouvelle demande - Site DEC BIM">
               <input type="hidden" name="_language" value="fr">
@@ -229,6 +234,7 @@
               <input type="hidden" name="_next" value="https://dec-bim.fr/merci.html">
               <input type="hidden" name="_autoresponse" value="Merci pour votre message. Je vous réponds sous 24h.">
               <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off">
+			  <input type="hidden" name="_format" value="plain">
               <input type="hidden" name="_cc" value="diag@gmail.com">
               
               <!-- Indicateur de progression -->
@@ -302,7 +308,7 @@
                     <option value="permis">Permis de Construire</option>
                     <option value="declaration">Déclaration Préalable</option>
                     <option value="3d">Imagerie 3D / Rendu photoréaliste</option>
-                    <option value="revit">Modélisation BIM - Revit</option>
+                    <option value="modelisation">Modélisation BIM</option>
                     <option value="autre">Autre demande</option>
                   </select>
                 </div>
