--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -6,6 +6,10 @@
   <meta name="description" content="Mentions légales du site DEC BIM. Informations sur l'éditeur, hébergement, propriété intellectuelle et responsabilité.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="-pKegx6GY7YdypUieMLDoApWlZDHkawFoiCMPJfPcXs" />
+  <meta name="author" content="DEC BIM - Dessinateur Projeteur BIM Montpellier">
+  <meta name="geo.placename" content="Montpellier">
+  <meta name="geo.region" content="FR-34">
   
   <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/style.css">
