--- a/offres.html
+++ b/offres.html
@@ -6,12 +6,17 @@
   <meta name="description" content="Offres clés en main pour ERP catégorie 5, permis de construire et rendus 3D à Montpellier. Tarifs transparents et devis personnalisés.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="-pKegx6GY7YdypUieMLDoApWlZDHkawFoiCMPJfPcXs" />
+  <meta name="author" content="DEC BIM - Dessinateur Projeteur BIM Montpellier">
+  <meta name="geo.placename" content="Montpellier">
+  <meta name="geo.region" content="FR-34">
   
   <!-- Open Graph -->
   <meta property="og:title" content="Offres & Tarifs - DEC BIM Dessinateur Projeteur">
   <meta property="og:description" content="Forfaits ERP, permis de construire et rendus 3D à prix transparents">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://dec-bim.fr/offres.html">
+  <meta property="og:locale" content="fr_FR">
   
   <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/style.css">
@@ -183,7 +188,7 @@
           
           <!-- Ligne 5 -->
           <div class="table-row">
-            <div class="table-cell feature-col">Modélisation Revit</div>
+            <div class="table-cell feature-col">Modélisation BIM</div>
             <div class="table-cell plan-col basic"><i class="fas fa-times" aria-label="Non inclus"></i></div>
             <div class="table-cell plan-col popular"><i class="fas fa-check" aria-label="Inclus"></i></div>
             <div class="table-cell plan-col premium"><i class="fas fa-check" aria-label="Inclus"></i></div>
@@ -261,7 +266,7 @@
                 <h4>Inclus dans le forfait :</h4>
                 <ul class="feature-list">
                   <li><i class="fas fa-check"></i> Visite technique et relevé sur site</li>
-                  <li><i class="fas fa-check"></i> Modélisation BIM existant + projet (Revit)</li>
+                  <li><i class="fas fa-check"></i> Modélisation BIM existant + projet</li>
                   <li><i class="fas fa-check"></i> Plans sécurité incendie complets</li>
                   <li><i class="fas fa-check"></i> Plans accessibilité PMR norme ERP</li>
                   <li><i class="fas fa-check"></i> Notice technique réglementaire</li>
