--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,10 @@
   <meta name="description" content="Découvrez nos réalisations : ERP catégorie 5, permis de construire, rendus 3D. Exemples concrets de projets menés à bien à Montpellier et dans l'Hérault.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="-pKegx6GY7YdypUieMLDoApWlZDHkawFoiCMPJfPcXs" />
+  <meta name="author" content="DEC BIM - Dessinateur Projeteur BIM Montpellier">
+  <meta name="geo.placename" content="Montpellier">
+  <meta name="geo.region" content="FR-34">
   
   <!-- Open Graph -->
   <meta property="og:title" content="Portfolio - Réalisations DEC BIM">
@@ -13,6 +17,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://dec-bim.fr/portfolio.html">
   <meta property="og:image" content="https://dec-bim.fr/assets/img/portfolio/og-image.jpg">
+  <meta property="og:locale" content="fr_FR">
   
   <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/style.css">
@@ -138,8 +143,8 @@
             <button class="filter-btn" data-filter="3d">
               Imagerie 3D
             </button>
-            <button class="filter-btn" data-filter="revit">
-              Modélisation Revit
+            <button class="filter-btn" data-filter="modelisation">
+              Modélisation BIM
             </button>
           </div>
         </div>
@@ -162,7 +167,7 @@
       <div class="portfolio-grid" id="portfolio-container">
         
         <!-- Projet 1 - ERP -->
-        <article class="portfolio-item" data-category="erp revit" data-date="2024-03">
+        <article class="portfolio-item" data-category="erp modelisation" data-date="2024-03">
           <div class="portfolio-img">
             <img src="assets/img/portfolio/commerce-securite.jpg" alt="Plans sécurité incendie pour commerce - Détails des issues de secours et extincteurs" loading="lazy" width="350" height="250">
             <div class="portfolio-overlay">
@@ -185,7 +190,7 @@
               désenfumage et accessibilité PMR. Conformité totale avec la réglementation ERP catégorie 5.
             </p>
             <div class="project-tags">
-              <span>Revit</span>
+              <span>Modélisation</span>
               <span>Sécurité Incendie</span>
               <span>PMR</span>
               <span>Commerce</span>
