--- a/services.html
+++ b/services.html
@@ -6,12 +6,17 @@
   <meta name="description" content="Services de dessinateur-projeteur BIM : ERP catégorie 5, permis de construire, rendus 3D photoréalistes, modélisation Revit à Montpellier.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="-pKegx6GY7YdypUieMLDoApWlZDHkawFoiCMPJfPcXs" />
+  <meta name="author" content="DEC BIM - Dessinateur Projeteur BIM Montpellier">
+  <meta name="geo.placename" content="Montpellier">
+  <meta name="geo.region" content="FR-34">
   
   <!-- Open Graph -->
   <meta property="og:title" content="Services - DEC BIM Dessinateur Projeteur Montpellier">
   <meta property="og:description" content="Expertise en ERP catégorie 5, permis de construire et rendus 3D à Montpellier">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://dec-bim.fr/services.html">
+  <meta property="og:locale" content="fr_FR">
   
   <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/style.css">
