--- a/confidentialite.html
+++ b/confidentialite.html
@@ -6,6 +6,10 @@
   <meta name="description" content="Politique de confidentialité DEC BIM. Protection de vos données personnelles conformément au RGPD.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="-pKegx6GY7YdypUieMLDoApWlZDHkawFoiCMPJfPcXs" />
+  <meta name="author" content="DEC BIM - Dessinateur Projeteur BIM Montpellier">
+  <meta name="geo.placename" content="Montpellier">
+  <meta name="geo.region" content="FR-34">
   
   <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/style.css">
