--- a/merci.html
+++ b/merci.html
@@ -6,6 +6,10 @@
   <meta name="description" content="Merci pour votre message. Nous vous répondrons dans les plus brefs délais pour votre projet de dessin bâtiment à Montpellier.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, follow">
+  <meta name="google-site-verification" content="-pKegx6GY7YdypUieMLDoApWlZDHkawFoiCMPJfPcXs" />
+  <meta name="author" content="DEC BIM - Dessinateur Projeteur BIM Montpellier">
+  <meta name="geo.placename" content="Montpellier">
+  <meta name="geo.region" content="FR-34">
   
   <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/style.css">
