--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta property="og:locale" content="fr_FR">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
   <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
   
   <!-- Stylesheets -->
