--- a/404.html
+++ b/404.html
@@ -148,10 +148,10 @@
           <h2>Besoin d'aide rapidement ?</h2>
           <p>Si vous ne trouvez pas ce que vous cherchez ou avez besoin d'une assistance immédiate pour votre projet :</p>
           <div class="urgent-contact">
-            <a href="tel:+33000000000" class="btn btn-primary">
-              <i class="fas fa-phone"></i> Appeler : 00 00 00 00 00
+            <a href="tel:+33754235732" class="btn btn-primary">
+              <i class="fas fa-phone"></i> Appeler par téléphone
             </a>
-            <a href="mailto:diag@gmail.com" class="btn btn-secondary">
+            <a href="mailto:diagnosticexpertiseconseil@gmail.com" class="btn btn-secondary">
               <i class="fas fa-envelope"></i> Écrire un email
             </a>
           </div>
@@ -177,7 +177,7 @@
           <a href="#" class="social-link" aria-label="Instagram">
             <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
-          <a href="mailto:diag@gmail.com" class="social-link" aria-label="Email">
+          <a href="mailto:diagnosticexpertiseconseil@gmail.com" class="social-link" aria-label="Email">
             <i class="fas fa-envelope" aria-hidden="true"></i>
           </a>
         </div>
@@ -208,8 +208,8 @@
         <h3>Contact</h3>
         <address>
           <p><i class="fas fa-map-marker-alt" aria-hidden="true"></i> Montpellier, Hérault (34)</p>
-          <p><i class="fas fa-phone" aria-hidden="true"></i> <a href="tel:+33000000000">00 00 00 00 00</a></p>
-          <p><i class="fas fa-envelope" aria-hidden="true"></i> <a href="mailto:diag@gmail.com">diag@gmail.com</a></p>
+          <p><i class="fas fa-phone" aria-hidden="true"></i> <a href="tel:+33754235732">Téléphone</a></p>
+          <p><i class="fas fa-envelope" aria-hidden="true"></i> <a href="mailto:diagnosticexpertiseconseil@gmail.com">Mail</a></p>
         </address>
         <p><i class="fas fa-clock" aria-hidden="true"></i> Lun-Ven : 9h-18h</p>
       </div>
