--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
       "@type": "ContactPoint",
       "contactType": "customer service",
       "telephone": "+33-00-00-00-00",
-      "email": "diag@gmail.com",
+      "email": "diagnosticexpertiseconseil@gmail.com",
       "availableLanguage": "French",
       "areaServed": "FR",
       "hoursAvailable": {
@@ -135,7 +135,7 @@
                 </div>
                 <div class="method-content">
                   <h3>Téléphone</h3>
-                  <p><a href="tel:+33000000000">00 00 00 00 00</a></p>
+                  <p><a href="tel:+33754235732">Téléphone</a></p>
                   <small>Lun-Ven : 9h-18h</small>
                 </div>
               </div>
@@ -146,7 +146,7 @@
                 </div>
                 <div class="method-content">
                   <h3>Email</h3>
-                  <p><a href="mailto:diag@gmail.com">diag@gmail.com</a></p>
+                  <p><a href="mailto:diagnosticexpertiseconseil@gmail.com">Mail</a></p>
                   <small>Réponse sous 24h ouvrées</small>
                 </div>
               </div>
@@ -183,7 +183,7 @@
                 <a href="#" class="social-link instagram" aria-label="Instagram">
                   <i class="fab fa-instagram" aria-hidden="true"></i>
                 </a>
-                <a href="mailto:diag@gmail.com" class="social-link email" aria-label="Email">
+                <a href="mailto:diagnosticexpertiseconseil@gmail.com" class="social-link email" aria-label="Email">
                   <i class="fas fa-envelope" aria-hidden="true"></i>
                 </a>
               </div>
@@ -235,7 +235,7 @@
               <input type="hidden" name="_autoresponse" value="Merci pour votre message. Je vous réponds sous 24h.">
               <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off">
 			  <input type="hidden" name="_format" value="plain">
-              <input type="hidden" name="_cc" value="diag@gmail.com">
+              <input type="hidden" name="_cc" value="diagnosticexpertiseconseil@gmail.com">
               
               <!-- Indicateur de progression -->
               <div class="form-progress" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="33">
@@ -467,7 +467,7 @@
           <div class="faq-answer">
             <p>
               Je m'engage à répondre à toutes les demandes sous 24 heures ouvrées. Pour les demandes urgentes, 
-              n'hésitez pas à me joindre directement par téléphone au 00 00 00 00 00.
+              n'hésitez pas à me joindre directement par téléphone.
             </p>
           </div>
         </article>
@@ -526,8 +526,8 @@
           <p>Pour les demandes urgentes, contactez-moi directement par téléphone.</p>
         </div>
         <div class="urgent-phone">
-          <a href="tel:+33000000000" class="btn btn-primary btn-large">
-            <i class="fas fa-phone"></i> Appeler maintenant : 00 00 00 00 00
+          <a href="tel:+33754235732" class="btn btn-primary btn-large">
+            <i class="fas fa-phone"></i> Appeler maintenant
           </a>
         </div>
       </div>
@@ -551,7 +551,7 @@
           <a href="#" class="social-link" aria-label="Instagram">
             <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
-          <a href="mailto:diag@gmail.com" class="social-link" aria-label="Email">
+          <a href="mailto:diagnosticexpertiseconseil@gmail.com" class="social-link" aria-label="Email">
             <i class="fas fa-envelope" aria-hidden="true"></i>
           </a>
         </div>
@@ -582,8 +582,8 @@
         <h3>Contact</h3>
         <address>
           <p><i class="fas fa-map-marker-alt" aria-hidden="true"></i> Montpellier, Hérault (34)</p>
-          <p><i class="fas fa-phone" aria-hidden="true"></i> <a href="tel:+33000000000">00 00 00 00 00</a></p>
-          <p><i class="fas fa-envelope" aria-hidden="true"></i> <a href="mailto:diag@gmail.com">diag@gmail.com</a></p>
+          <p><i class="fas fa-phone" aria-hidden="true"></i> <a href="tel:+33754235732">Téléphone</a></p>
+          <p><i class="fas fa-envelope" aria-hidden="true"></i> <a href="mailto:diagnosticexpertiseconseil@gmail.com">Mail</a></p>
         </address>
         <p><i class="fas fa-clock" aria-hidden="true"></i> Lun-Ven : 9h-18h</p>
       </div>
