--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     "priceRange": "€€",
     "openingHours": "Mo-Fr 09:00-18:00",
     "telephone": "+33-00-00-00-00",
-    "email": "diag@gmail.com",
+    "email": "diagnosticexpertiseconseil@gmail.com",
     "url": "https://dec-bim.fr",
     "sameAs": []
   }
@@ -140,7 +140,7 @@
         </div>
       </div>
       <div class="hero-image">
-        <img src="assets/img/hero-visual.svg" alt="Visualisation projet architectural 3D - Plans techniques et rendu réaliste" class="hero-img" width="600" height="400" loading="lazy">
+        <img src="assets/img/Vue3D3.jpg" alt="Visualisation projet architectural 3D - Plans techniques et rendu réaliste" class="hero-img" width="600" height="400" loading="lazy">
       </div>
     </div>
   </section>
@@ -328,8 +328,8 @@
         <a href="contact.html" class="btn btn-primary btn-large">
           <i class="fas fa-comments"></i> Échanger sur mon projet
         </a>
-        <a href="tel:+33000000000" class="btn btn-secondary btn-large">
-          <i class="fas fa-phone"></i> 00 00 00 00 00
+        <a href="tel:+33754235732" class="btn btn-secondary btn-large">
+          <i class="fas fa-phone"></i> Téléphone
         </a>
       </div>
     </div>
@@ -352,7 +352,7 @@
           <a href="#" class="social-link" aria-label="Instagram">
             <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
-          <a href="mailto:diag@gmail.com" class="social-link" aria-label="Email">
+          <a href="mailto:diagnosticexpertiseconseil@gmail.com" class="social-link" aria-label="Email">
             <i class="fas fa-envelope" aria-hidden="true"></i>
           </a>
         </div>
@@ -383,8 +383,8 @@
         <h3>Contact</h3>
         <address>
           <p><i class="fas fa-map-marker-alt" aria-hidden="true"></i> Montpellier, Hérault (34)</p>
-          <p><i class="fas fa-phone" aria-hidden="true"></i> <a href="tel:+33000000000">00 00 00 00 00</a></p>
-          <p><i class="fas fa-envelope" aria-hidden="true"></i> <a href="mailto:diag@gmail.com">diag@gmail.com</a></p>
+          <p><i class="fas fa-phone" aria-hidden="true"></i> <a href="tel:+33754235732">Téléphone</a></p>
+          <p><i class="fas fa-envelope" aria-hidden="true"></i> <a href="mailto:diagnosticexpertiseconseil@gmail.com">Mail</a></p>
         </address>
         <p><i class="fas fa-clock" aria-hidden="true"></i> Lun-Ven : 9h-18h</p>
       </div>
