--- a/portfolio.html
+++ b/portfolio.html
@@ -498,8 +498,8 @@
           <a href="contact.html" class="btn btn-primary btn-large">
             <i class="fas fa-calendar-check"></i> Planifier un échange
           </a>
-          <a href="tel:+33000000000" class="btn btn-secondary btn-large">
-            <i class="fas fa-phone"></i> 00 00 00 00 00
+          <a href="tel:+33754235732" class="btn btn-secondary btn-large">
+            <i class="fas fa-phone"></i> Téléphone
           </a>
         </div>
       </div>
@@ -557,7 +557,7 @@
           <a href="#" class="social-link" aria-label="Instagram">
             <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
-          <a href="mailto:diag@gmail.com" class="social-link" aria-label="Email">
+          <a href="mailto:diagnosticexpertiseconseil@gmail.com" class="social-link" aria-label="Email">
             <i class="fas fa-envelope" aria-hidden="true"></i>
           </a>
         </div>
@@ -588,8 +588,8 @@
         <h3>Contact</h3>
         <address>
           <p><i class="fas fa-map-marker-alt" aria-hidden="true"></i> Montpellier, Hérault (34)</p>
-          <p><i class="fas fa-phone" aria-hidden="true"></i> <a href="tel:+33000000000">00 00 00 00 00</a></p>
-          <p><i class="fas fa-envelope" aria-hidden="true"></i> <a href="mailto:diag@gmail.com">diag@gmail.com</a></p>
+          <p><i class="fas fa-phone" aria-hidden="true"></i> <a href="tel:+33754235732">Téléphone</a></p>
+          <p><i class="fas fa-envelope" aria-hidden="true"></i> <a href="mailto:diagnosticexpertiseconseil@gmail.com">Mail</a></p>
         </address>
         <p><i class="fas fa-clock" aria-hidden="true"></i> Lun-Ven : 9h-18h</p>
       </div>
