--- a/confidentialite.html
+++ b/confidentialite.html
@@ -455,7 +455,7 @@
                       <i class="fas fa-at"></i>
                       <div>
                         <strong>Par email</strong>
-                        <a href="mailto:diag@gmail.com">diag@gmail.com</a>
+                        <a href="mailto:diagnosticexpertiseconseil@gmail.com">Mail</a>
                         <p>Objet : "Exercice droit RGPD"</p>
                       </div>
                     </div>
@@ -555,7 +555,7 @@
                       <i class="fas fa-envelope"></i>
                       <div>
                         <strong>Email dédié</strong>
-                        <a href="mailto:diag@gmail.com">diag@gmail.com</a>
+                        <a href="mailto:diagnosticexpertiseconseil@gmail.com">Mail</a>
                       </div>
                     </div>
                     
@@ -563,7 +563,7 @@
                       <i class="fas fa-phone"></i>
                       <div>
                         <strong>Téléphone</strong>
-                        <a href="tel:+33000000000">00 00 00 00 00</a>
+                        <a href="tel:+33754235732">Téléphone</a>
                       </div>
                     </div>
                     
@@ -633,7 +633,7 @@
           <a href="#" class="social-link" aria-label="Instagram">
             <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
-          <a href="mailto:diag@gmail.com" class="social-link" aria-label="Email">
+          <a href="mailto:diagnosticexpertiseconseil@gmail.com" class="social-link" aria-label="Email">
             <i class="fas fa-envelope" aria-hidden="true"></i>
           </a>
         </div>
@@ -664,8 +664,8 @@
         <h3>Contact</h3>
         <address>
           <p><i class="fas fa-map-marker-alt" aria-hidden="true"></i> Montpellier, Hérault (34)</p>
-          <p><i class="fas fa-phone" aria-hidden="true"></i> <a href="tel:+33000000000">00 00 00 00 00</a></p>
-          <p><i class="fas fa-envelope" aria-hidden="true"></i> <a href="mailto:diag@gmail.com">diag@gmail.com</a></p>
+          <p><i class="fas fa-phone" aria-hidden="true"></i> <a href="tel:+33754235732">Téléphone</a></p>
+          <p><i class="fas fa-envelope" aria-hidden="true"></i> <a href="mailto:diagnosticexpertiseconseil@gmail.com">Mail</a></p>
         </address>
         <p><i class="fas fa-clock" aria-hidden="true"></i> Lun-Ven : 9h-18h</p>
       </div>
